--- a/examples/connect.ipynb
+++ b/examples/connect.ipynb
@@ -1,97 +1,151 @@
-# Ejemplo de uso: Conexión a bases de datos SQL con `sql_connection`
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ejemplo de uso: Conexión a bases de datos SQL con `sql_connection`\n",
+    "\n",
+    "Este notebook demuestra cómo conectarse a una base de datos existente usando el módulo OOP `sql_connection`.\n",
+    "El objetivo es realizar consultas de lectura sobre una base de datos real, sin crear ni modificar tablas.\n",
+    "\n",
+    "Base de ejemplo: **toys_and_models.sqlite**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Requisitos\n",
+    "\n",
+    "Instala el paquete en modo editable desde la raíz del proyecto:\n",
+    "\n",
+    "```bash\n",
+    "pip install -e .\n",
+    "```\n",
+    "\n",
+    "Instala `pandas` si deseas mostrar los resultados como DataFrames:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sql_connection import get_connector\n",
+    "import os\n",
+    "try:\n",
+    "    import pandas as pd\n",
+    "except ImportError:\n",
+    "    pd = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ruta de la base de datos existente\n",
+    "db_path = os.path.abspath(\"examples/toys_and_models.sqlite\")\n",
+    "\n",
+    "if not os.path.exists(db_path):\n",
+    "    raise FileNotFoundError(f\"No se encontró la base de datos: {db_path}\")\n",
+    "\n",
+    "# Crear conector y abrir conexión\n",
+    "conn = get_connector(\"sqlite\", path=db_path)\n",
+    "with conn:\n",
+    "    print(\"✅ Conectado a:\", conn.dsn_summary())\n",
+    "    print(\"Ping:\", conn.ping())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Listar tablas de la base de datos\n",
+    "query_tables = \"SELECT name FROM sqlite_master WHERE type='table';\"\n",
+    "\n",
+    "if pd:\n",
+    "    display(conn.read_sql(query_tables))\n",
+    "else:\n",
+    "    cur = conn.conn.cursor()\n",
+    "    cur.execute(query_tables)\n",
+    "    print(\"Tablas:\", cur.fetchall())\n",
+    "    cur.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Consultar los primeros clientes\n",
+    "query_customers = \"SELECT customerNumber, customerName, country FROM customers LIMIT 10;\"\n",
+    "\n",
+    "if pd:\n",
+    "    display(conn.read_sql(query_customers))\n",
+    "else:\n",
+    "    cur = conn.conn.cursor()\n",
+    "    cur.execute(query_customers)\n",
+    "    for row in cur.fetchall():\n",
+    "        print(row)\n",
+    "    cur.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Consulta analítica: top 5 países por número de clientes\n",
+    "query_top_countries = \"\"\"\n",
+    "SELECT country, COUNT(*) AS num_customers\n",
+    "FROM customers\n",
+    "GROUP BY country\n",
+    "ORDER BY num_customers DESC\n",
+    "LIMIT 5;\n",
+    "\"\"\"\n",
+    "\n",
+    "if pd:\n",
+    "    display(conn.read_sql(query_top_countries))\n",
+    "else:\n",
+    "    cur = conn.conn.cursor()\n",
+    "    cur.execute(query_top_countries)\n",
+    "    print(\"Top países:\", cur.fetchall())\n",
+    "    cur.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusiones\n",
+    "\n",
+    "- El flujo OOP permite conectar con distintos motores (SQLite, PostgreSQL, Oracle) sin cambiar el código.\n",
+    "- `read_sql()` simplifica el análisis exploratorio con pandas.\n",
+    "- Este notebook puede servir como base para integraciones o dashboards SQL con Python."
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.x"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
 
-Este notebook demuestra cómo conectarse a una base de datos existente usando el módulo OOP `sql_connection`.
-El objetivo es realizar consultas de lectura sobre una base de datos real, sin crear ni modificar tablas.
 
-Base de ejemplo: **toys_and_models.sqlite**
-
-    else:
-        cur = conn.conn.cursor()
-        cur.execute("SELECT * FROM products ORDER BY price DESC")
-        print(cur.fetchall())
-        cur.close()
-
-
-## Requisitos
-
-Asegúrate de tener el paquete instalado en modo editable desde la raíz del proyecto:
-
-```bash
-pip install -e .
-
-
-
----
-
-### **Celda 3 — Imports (Code)**
-```python
-from sql_connection import get_connector
-import os
-
-try:
-    import pandas as pd
-except ImportError:
-    pd = None
-
-# Definir ruta de la base de datos
-db_path = os.path.abspath("examples/toys_and_models.sqlite")
-
-if not os.path.exists(db_path):
-    raise FileNotFoundError(f"No se encontró la base de datos en {db_path}")
-
-# Crear el conector OOP
-conn = get_connector("sqlite", path=db_path)
-
-# Abrir conexión
-with conn:
-    print("✅ Conectado a:", conn.dsn_summary())
-    print("Ping:", conn.ping())
-
-# Mostrar las tablas disponibles en la base de datos
-query_tables = "SELECT name FROM sqlite_master WHERE type='table';"
-
-if pd:
-    display(conn.read_sql(query_tables))
-else:
-    cur = conn.conn.cursor()
-    cur.execute(query_tables)
-    print("Tablas:", cur.fetchall())
-    cur.close()
-
-# Ejemplo de consulta: primeros clientes
-query_customers = "SELECT customerNumber, customerName, country FROM customers LIMIT 10;"
-
-if pd:
-    display(conn.read_sql(query_customers))
-else:
-    cur = conn.conn.cursor()
-    cur.execute(query_customers)
-    for row in cur.fetchall():
-        print(row)
-    cur.close()
-# Ejemplo: top 5 países por número de clientes
-query_top_countries = """
-SELECT country, COUNT(*) AS num_customers
-FROM customers
-GROUP BY country
-ORDER BY num_customers DESC
-LIMIT 5;
-"""
-
-if pd:
-    display(conn.read_sql(query_top_countries))
-else:
-    cur = conn.conn.cursor()
-    cur.execute(query_top_countries)
-    print("Top países:", cur.fetchall())
-    cur.close()
-
-## Conclusiones
-
-- La conexión OOP permite cambiar de motor (SQLite, PostgreSQL, Oracle, etc.) con el mismo flujo.
-- El método `read_sql()` simplifica el análisis exploratorio con `pandas`.
-- El notebook puede servir como base para pruebas de integración o para dashboards SQL con Python.
-
-**Próximos pasos:**
-- Probar con `PostgreSQL` u otros motores definidos en el paquete.
-- Integrar las consultas en un pipeline de análisis o dashboard interactivo.
