--- a/examples/connect.ipynb
+++ b/examples/connect.ipynb
@@ -9,7 +9,9 @@
     "Este notebook demuestra cómo conectarse a una base de datos existente usando el módulo OOP `sql_connection`.\n",
     "El objetivo es realizar consultas de lectura sobre una base de datos real, sin crear ni modificar tablas.\n",
     "\n",
-    "Base de ejemplo: **toys_and_models.sqlite**"
+    "Base de ejemplo: **toys_and_models.sqlite** (ubicada en `examples/`).\n",
+    "\n",
+    "Puedes sobreescribir la ruta usando la variable de entorno `SQL_CONN_EXAMPLE_DB`."
    ]
   },
   {
@@ -47,13 +49,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Ruta de la base de datos existente\n",
-    "db_path = os.path.abspath(\"examples/toys_and_models.sqlite\")\n",
+    "# Ruta de la base de datos existente (permite override por variable de entorno)\n",
+    "db_path = os.environ.get(\"SQL_CONN_EXAMPLE_DB\", \"examples/toys_and_models.sqlite\")\n",
+    "db_path = os.path.abspath(db_path)\n",
     "\n",
     "if not os.path.exists(db_path):\n",
     "    raise FileNotFoundError(f\"No se encontró la base de datos: {db_path}\")\n",
     "\n",
-    "# Crear conector y abrir conexión\n",
+    "# Crear conector y abrir conexión (context manager)\n",
     "conn = get_connector(\"sqlite\", path=db_path)\n",
     "with conn:\n",
     "    print(\"✅ Conectado a:\", conn.dsn_summary())\n",
@@ -72,10 +75,8 @@
     "if pd:\n",
     "    display(conn.read_sql(query_tables))\n",
     "else:\n",
-    "    cur = conn.conn.cursor()\n",
-    "    cur.execute(query_tables)\n",
-    "    print(\"Tablas:\", cur.fetchall())\n",
-    "    cur.close()"
+    "    rows = conn.query(query_tables)\n",
+    "    print(\"Tablas:\", rows)"
    ]
   },
   {
@@ -84,17 +85,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Consultar los primeros clientes\n",
+    "# Consultar los primeros clientes (solo lectura)\n",
     "query_customers = \"SELECT customerNumber, customerName, country FROM customers LIMIT 10;\"\n",
     "\n",
     "if pd:\n",
     "    display(conn.read_sql(query_customers))\n",
     "else:\n",
-    "    cur = conn.conn.cursor()\n",
-    "    cur.execute(query_customers)\n",
-    "    for row in cur.fetchall():\n",
-    "        print(row)\n",
-    "    cur.close()"
+    "    rows = conn.query(query_customers)\n",
+    "    for row in rows:\n",
+    "        print(row)"
    ]
   },
   {
@@ -115,10 +114,33 @@
     "if pd:\n",
     "    display(conn.read_sql(query_top_countries))\n",
     "else:\n",
-    "    cur = conn.conn.cursor()\n",
-    "    cur.execute(query_top_countries)\n",
-    "    print(\"Top países:\", cur.fetchall())\n",
-    "    cur.close()"
+    "    rows = conn.query(query_top_countries)\n",
+    "    print(\"Top países:\", rows)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Consulta parametrizada (buenas prácticas para evitar inyección)\n",
+    "country = \"USA\"\n",
+    "sql_param = \"\"\"\n",
+    "SELECT customerNumber, customerName, country\n",
+    "FROM customers\n",
+    "WHERE country = :country\n",
+    "LIMIT 5;\n",
+    "\"\"\"\n",
+    "\n",
+    "params = {\"country\": country}\n",
+    "\n",
+    "if pd:\n",
+    "    display(conn.read_sql(sql_param, params=params))\n",
+    "else:\n",
+    "    rows = conn.query(sql_param, params=params)\n",
+    "    for r in rows:\n",
+    "        print(r)"
    ]
   },
   {
@@ -127,9 +149,9 @@
    "source": [
     "## Conclusiones\n",
     "\n",
-    "- El flujo OOP permite conectar con distintos motores (SQLite, PostgreSQL, Oracle) sin cambiar el código.\n",
-    "- `read_sql()` simplifica el análisis exploratorio con pandas.\n",
-    "- Este notebook puede servir como base para integraciones o dashboards SQL con Python."
+    "- El flujo OOP permite conectar con distintos motores (SQLite, PostgreSQL, Oracle) sin cambiar el código del análisis.\n",
+    "- `read_sql()` simplifica el análisis exploratorio con `pandas`; `query()` es una alternativa ligera sin dependencias.\n",
+    "- Este notebook es una base para integraciones posteriores (pipelines o dashboards), manteniendo **solo lectura**."
    ]
   }
  ],
@@ -147,5 +169,7 @@
  "nbformat": 4,
  "nbformat_minor": 5
 }
+
+
 
 
