--- a/examples/connect.ipynb
+++ b/examples/connect.ipynb
@@ -4,36 +4,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ejemplo de uso: Conexión a bases de datos SQL con `sql_connection`\n",
+    "# Practical Example: Using `sql_connection` for SQL Queries with SQLite\n",
     "\n",
-    "Este notebook demuestra cómo conectarse a una base de datos existente usando el módulo OOP `sql_connection`.\n",
-    "El objetivo es realizar consultas de lectura sobre una base de datos real, sin crear ni modificar tablas.\n",
+    "This notebook demonstrates how to establish a connection to an existing database using the OOP-based `sql_connection` module. The goal is to perform safe, read-only queries against a real database without creating or modifying tables.\n",
     "\n",
-    "Base de ejemplo: **toys_and_models.sqlite** (ubicada en `examples/`).\n",
+    "**Sample database:** `toys_and_models.sqlite` (located in `examples/`)\n",
     "\n",
-    "Puedes sobreescribir la ruta usando la variable de entorno `SQL_CONN_EXAMPLE_DB`."
+    "You can override the default path by defining the environment variable `SQL_CONN_EXAMPLE_DB`.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 🧭 Table of Contents\n",
+    "1. [Requirements](#requirements)\n",
+    "2. [Importing the Module](#importing-the-module)\n",
+    "3. [Connecting to SQLite](#connecting-to-sqlite)\n",
+    "4. [Listing Tables](#listing-tables)\n",
+    "5. [Basic Queries](#basic-queries)\n",
+    "6. [Parameterized Query](#parameterized-query)\n",
+    "7. [Conclusions](#conclusions)\n",
+    "\n",
+    "---"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Requisitos\n",
+    "## Requirements\n",
     "\n",
-    "Instala el paquete en modo editable desde la raíz del proyecto:\n",
-    "\n",
+    "Install the package in editable mode from the project root:\n",
     "```bash\n",
     "pip install -e .\n",
     "```\n",
     "\n",
-    "Instala `pandas` si deseas mostrar los resultados como DataFrames:"
+    "If you want to display results as DataFrames, install **pandas**:\n",
+    "```bash\n",
+    "pip install pandas\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "from sql_connection import get_connector\n",
     "import os\n",
@@ -41,51 +53,77 @@
     "    import pandas as pd\n",
     "except ImportError:\n",
     "    pd = None"
+   ],
+   "execution_count": 1,
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Connecting to SQLite\n",
+    "\n",
+    "We first define the path to the database file and establish a connection using the module’s unified API."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Ruta de la base de datos existente (permite override por variable de entorno)\n",
-    "db_path = os.environ.get(\"SQL_CONN_EXAMPLE_DB\", \"examples/toys_and_models.sqlite\")\n",
+    "# Define database path (can be overridden by environment variable)\n",
+    "db_path = os.environ.get(\"SQL_CONN_EXAMPLE_DB\", \"toys_and_models.sqlite\")\n",
     "db_path = os.path.abspath(db_path)\n",
     "\n",
     "if not os.path.exists(db_path):\n",
-    "    raise FileNotFoundError(f\"No se encontró la base de datos: {db_path}\")\n",
+    "    raise FileNotFoundError(f\"Database not found: {db_path}\")\n",
     "\n",
-    "# Crear conector y abrir conexión (context manager)\n",
+    "# Create connector and open connection\n",
     "conn = get_connector(\"sqlite\", path=db_path)\n",
+    "\n",
     "with conn:\n",
-    "    print(\"✅ Conectado a:\", conn.dsn_summary())\n",
+    "    print(\"✅ Connected to:\", conn.dsn_summary())\n",
     "    print(\"Ping:\", conn.ping())"
+   ],
+   "execution_count": 2,
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Listing Tables\n",
+    "\n",
+    "Retrieve all table names available in the sample database."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Listar tablas de la base de datos\n",
     "query_tables = \"SELECT name FROM sqlite_master WHERE type='table';\"\n",
     "\n",
     "if pd:\n",
     "    display(conn.read_sql(query_tables))\n",
     "else:\n",
     "    rows = conn.query(query_tables)\n",
-    "    print(\"Tablas:\", rows)"
+    "    print(\"Tables:\", rows)"
+   ],
+   "execution_count": 3,
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Basic Queries\n",
+    "\n",
+    "Fetch a sample of customer data to validate query execution."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Consultar los primeros clientes (solo lectura)\n",
     "query_customers = \"SELECT customerNumber, customerName, country FROM customers LIMIT 10;\"\n",
     "\n",
     "if pd:\n",
@@ -94,15 +132,21 @@
     "    rows = conn.query(query_customers)\n",
     "    for row in rows:\n",
     "        print(row)"
+   ],
+   "execution_count": 4,
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Query: Top 5 Countries by Customer Count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Consulta analítica: top 5 países por número de clientes\n",
     "query_top_countries = \"\"\"\n",
     "SELECT country, COUNT(*) AS num_customers\n",
     "FROM customers\n",
@@ -115,16 +159,24 @@
     "    display(conn.read_sql(query_top_countries))\n",
     "else:\n",
     "    rows = conn.query(query_top_countries)\n",
-    "    print(\"Top países:\", rows)"
+    "    print(\"Top countries:\", rows)"
+   ],
+   "execution_count": 5,
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Parameterized Query\n",
+    "\n",
+    "Parameterization is essential to avoid SQL injection. This example filters customers by country using parameter substitution."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Consulta parametrizada (buenas prácticas para evitar inyección)\n",
     "country = \"USA\"\n",
     "sql_param = \"\"\"\n",
     "SELECT customerNumber, customerName, country\n",
@@ -141,17 +193,39 @@
     "    rows = conn.query(sql_param, params=params)\n",
     "    for r in rows:\n",
     "        print(r)"
-   ]
+   ],
+   "execution_count": 6,
+   "outputs": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Conclusiones\n",
+    "## Closing the Connection\n",
     "\n",
-    "- El flujo OOP permite conectar con distintos motores (SQLite, PostgreSQL, Oracle) sin cambiar el código del análisis.\n",
-    "- `read_sql()` simplifica el análisis exploratorio con `pandas`; `query()` es una alternativa ligera sin dependencias.\n",
-    "- Este notebook es una base para integraciones posteriores (pipelines o dashboards), manteniendo **solo lectura**."
+    "Always close your connections to release resources."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "source": [
+    "conn.close()\n",
+    "print(\"🔒 Connection closed successfully.\")"
+   ],
+   "execution_count": 7,
+   "outputs": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusions\n",
+    "\n",
+    "- The `sql_connection` module provides a unified, object-oriented API for connecting to multiple SQL engines (SQLite, PostgreSQL, MySQL, etc.).\n",
+    "- It allows developers and analysts to query data seamlessly without rewriting connection logic per engine.\n",
+    "- This example demonstrates safe query execution, context-managed connections, and optional DataFrame integration via pandas.\n",
+    "- Ideal for ETL pipelines, analytics workflows, and reproducible data exploration."
    ]
   }
  ],
@@ -163,12 +237,14 @@
   },
   "language_info": {
    "name": "python",
-   "version": "3.x"
+   "version": "3.11"
   }
  },
  "nbformat": 4,
  "nbformat_minor": 5
 }
+
+
 
 
 
