--- a/examples/connect.ipynb
+++ b/examples/connect.ipynb
@@ -4,43 +4,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Practical Example: Using `sql_connection` for SQL Queries with SQLite\n",
-    "\n",
-    "This notebook demonstrates how to establish a connection to an existing database using the OOP-based `sql_connection` module. The goal is to perform safe, read-only queries against a real database without creating or modifying tables.\n",
-    "\n",
-    "**Sample database:** `toys_and_models.sqlite` (located in `examples/`)\n",
-    "\n",
-    "You can override the default path by defining the environment variable `SQL_CONN_EXAMPLE_DB`.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### 🧭 Table of Contents\n",
-    "1. [Requirements](#requirements)\n",
-    "2. [Importing the Module](#importing-the-module)\n",
-    "3. [Connecting to SQLite](#connecting-to-sqlite)\n",
-    "4. [Listing Tables](#listing-tables)\n",
-    "5. [Basic Queries](#basic-queries)\n",
-    "6. [Parameterized Query](#parameterized-query)\n",
-    "7. [Conclusions](#conclusions)\n",
-    "\n",
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Requirements\n",
     "\n",
-    "Install the package in editable mode from the project root:\n",
+    "Follow these steps to set up your environment and run this example successfully:\n",
+    "\n",
+    "1. **Clone the repository and create a virtual environment**\n",
+    "```bash\n",
+    "git clone https://github.com/aalopez76/SQL-Connection-Module.git\n",
+    "cd SQL-Connection-Module\n",
+    "\n",
+    "python -m venv venv\n",
+    "# On Windows\n",
+    "venv\\Scripts\\activate\n",
+    "# On macOS/Linux\n",
+    "source venv/bin/activate\n",
+    "```\n",
+    "\n",
+    "2. **Install the package in editable mode**\n",
     "```bash\n",
     "pip install -e .\n",
     "```\n",
     "\n",
-    "If you want to display results as DataFrames, install **pandas**:\n",
+    "3. **Install pandas (optional, for DataFrame display)**\n",
     "```bash\n",
     "pip install pandas\n",
-    "```"
+    "```\n",
+    "\n",
+    "4. **Verify installation**\n",
+    "```bash\n",
+    "python -c \"from sql_connection import get_connector; print('✅ Import OK')\"\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "Below is a complete working example demonstrating database connection, table listing, and read-only querying using SQLite."
    ]
   },
   {
@@ -49,27 +46,12 @@
    "source": [
     "from sql_connection import get_connector\n",
     "import os\n",
+    "\n",
     "try:\n",
     "    import pandas as pd\n",
     "except ImportError:\n",
-    "    pd = None"
-   ],
-   "execution_count": 1,
-   "outputs": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Connecting to SQLite\n",
+    "    pd = None\n",
     "\n",
-    "We first define the path to the database file and establish a connection using the module’s unified API."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "metadata": {},
-   "source": [
     "# Define database path (can be overridden by environment variable)\n",
     "db_path = os.environ.get(\"SQL_CONN_EXAMPLE_DB\", \"toys_and_models.sqlite\")\n",
     "db_path = os.path.abspath(db_path)\n",
@@ -79,21 +61,18 @@
     "\n",
     "# Create connector and open connection\n",
     "conn = get_connector(\"sqlite\", path=db_path)\n",
-    "\n",
-    "with conn:\n",
-    "    print(\"✅ Connected to:\", conn.dsn_summary())\n",
-    "    print(\"Ping:\", conn.ping())"
+    "conn.connect()\n",
+    "print(\"✅ Connected to:\", conn.dsn_summary())"
    ],
-   "execution_count": 2,
+   "execution_count": null,
    "outputs": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Listing Tables\n",
-    "\n",
-    "Retrieve all table names available in the sample database."
+    "### List Tables\n",
+    "Retrieve all available tables from the SQLite database."
    ]
   },
   {
@@ -108,16 +87,15 @@
     "    rows = conn.query(query_tables)\n",
     "    print(\"Tables:\", rows)"
    ],
-   "execution_count": 3,
+   "execution_count": null,
    "outputs": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Basic Queries\n",
-    "\n",
-    "Fetch a sample of customer data to validate query execution."
+    "### Query: Retrieve the first 10 customers\n",
+    "Perform a read-only query to inspect sample data."
    ]
   },
   {
@@ -133,14 +111,15 @@
     "    for row in rows:\n",
     "        print(row)"
    ],
-   "execution_count": 4,
+   "execution_count": null,
    "outputs": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Query: Top 5 Countries by Customer Count"
+    "### Analytical Query: Top 5 Countries by Customer Count\n",
+    "This query aggregates the number of customers per country and returns the top 5 results."
    ]
   },
   {
@@ -161,16 +140,15 @@
     "    rows = conn.query(query_top_countries)\n",
     "    print(\"Top countries:\", rows)"
    ],
-   "execution_count": 5,
+   "execution_count": null,
    "outputs": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Parameterized Query\n",
-    "\n",
-    "Parameterization is essential to avoid SQL injection. This example filters customers by country using parameter substitution."
+    "### Parameterized Query (Best Practice)\n",
+    "Use parameterized SQL queries to prevent SQL injection and improve code safety."
    ]
   },
   {
@@ -194,16 +172,15 @@
     "    for r in rows:\n",
     "        print(r)"
    ],
-   "execution_count": 6,
+   "execution_count": null,
    "outputs": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Closing the Connection\n",
-    "\n",
-    "Always close your connections to release resources."
+    "### Close Connection\n",
+    "Always close connections to ensure resources are released properly."
    ]
   },
   {
@@ -213,7 +190,7 @@
     "conn.close()\n",
     "print(\"🔒 Connection closed successfully.\")"
    ],
-   "execution_count": 7,
+   "execution_count": null,
    "outputs": []
   },
   {
@@ -222,10 +199,10 @@
    "source": [
     "## Conclusions\n",
     "\n",
-    "- The `sql_connection` module provides a unified, object-oriented API for connecting to multiple SQL engines (SQLite, PostgreSQL, MySQL, etc.).\n",
-    "- It allows developers and analysts to query data seamlessly without rewriting connection logic per engine.\n",
-    "- This example demonstrates safe query execution, context-managed connections, and optional DataFrame integration via pandas.\n",
-    "- Ideal for ETL pipelines, analytics workflows, and reproducible data exploration."
+    "- The `sql_connection` module provides a unified, object-oriented API for interacting with multiple SQL engines (SQLite, PostgreSQL, MySQL, etc.).\n",
+    "- It allows developers and analysts to query heterogeneous data sources seamlessly without modifying connection logic for each engine.\n",
+    "- This example demonstrates secure query execution, context-managed connections, and optional pandas DataFrame integration.\n",
+    "- Ideal for ETL pipelines, analytical workflows, and reproducible data exploration in production environments."
    ]
   }
  ],
