--- a/examples/connect.ipynb
+++ b/examples/connect.ipynb
@@ -1,4 +1,31 @@
 {
+cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Practical Example: Using `sql_connection` for SQL Queries with SQLite\n",
+    "\n",
+    "This notebook demonstrates how to establish a connection to an existing database using the OOP-based `sql_connection` module. The goal is to perform safe, read-only queries against a real database without creating or modifying tables.\n",
+    "\n",
+    "**Sample database:** `toys_and_models.sqlite` (located in `examples/`)\n",
+    "\n",
+    "You can override the default path by defining the environment variable `SQL_CONN_EXAMPLE_DB`.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 🧭 Table of Contents\n",
+    "1. [Requirements](#requirements)\n",
+    "2. [Importing the Module](#importing-the-module)\n",
+    "3. [Connecting to SQLite](#connecting-to-sqlite)\n",
+    "4. [Listing Tables](#listing-tables)\n",
+    "5. [Basic Queries](#basic-queries)\n",
+    "6. [Parameterized Query](#parameterized-query)\n",
+    "7. [Conclusions](#conclusions)\n",
+    "\n",
+    "---"
+   ]
+  },
  "cells": [
   {
    "cell_type": "markdown",
